# simple_display

./: Cargo.toml
display/: Cargo.toml
display/include_bmp/: Cargo.toml
display/include_bmp/src/: lib.rs
display/src/: lib.rs
include_bmp/: Cargo.toml
include_bmp/src/: lib.rs
libdisplay/: Cargo.toml
libdisplay/include_bmp/: .gitignore
libdisplay/src/: lib.rs
src/: colortest.c  main.rs  nexus.c
src/image_converter/: converter.py
