cargo-features = ["profile-rustflags"]

[package]
name = "simple_display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_bmp = { path = "include_bmp" }

[features]
24bpp = []

[profile.release]
opt-level="s"
strip=true
overflow-checks=false
lto="fat"
panic="abort"
codegen-units=1
rustflags = ["-C", "target-cpu=native"]
