[package]
name = "include_bmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
rustbitmap = "0.1.0"
syn = "2.0"
quote = "1.0"

[profile.dev]
opt-level = 3
debug = 1
lto = true

